--- a/portfolio.html
+++ b/portfolio.html
@@ -18,38 +18,38 @@
 
 <body>
   <!-- Header container -->
-<header class="header">
-  <!-- Navigation -->
-  <div class="header_container container">
-    <nav class="nav_panel">
-      <!-- LOGO -->
-      <a href="./index.html" class="logo link">Web<span class="loggo link">Studio</span></a>
-      <ul class="header_menu_list list">
-        <li class="header_menu_item list">
-          <a class="header_men_link link" href="./index.html">Studio</a>
-        </li>
-        <li class="header_menu_item list">
-          <a class="header_men_link link current" href="./portfolio.html">Portfolio</a>
-        </li>
-        <li class="header_menu_item list">
-          <a class="header_men_link link" href="">Contacts</a>
-        </li>
-      </ul>
-    </nav>
-    <address class="adress_lnk">
-      <ul class="header_social_list list">
-        <li class="header_social_menu">
-          <a class="header_social_link link" href="mailto:info@devstudio.com"
-            rel="noopener noreferrer">info@devstudio.com</a>
-        </li>
-        <li class="header_social_menu">
-          <a class="header_social_link link" href="tel:+110001111111" rel="noopener noreferrer">+11 (000)
-            111-11-11</a>
-        </li>
-      </ul>
-    </address>
-  </div>
-</header>
+  <header class="header">
+    <!-- Navigation -->
+    <div class="header_container container">
+      <nav class="nav_panel">
+        <!-- LOGO -->
+        <a href="./index.html" class="logo link">Web<span class="loggo link">Studio</span></a>
+        <ul class="header_menu_list list">
+          <li class="header_menu_item list">
+            <a class="header_men_link link" href="./index.html">Studio</a>
+          </li>
+          <li class="header_menu_item list">
+            <a class="header_men_link link current" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header_menu_item list">
+            <a class="header_men_link link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="adress_lnk">
+        <ul class="header_social_list list">
+          <li class="header_social_menu">
+            <a class="header_social_link link" href="mailto:info@devstudio.com"
+              rel="noopener noreferrer">info@devstudio.com</a>
+          </li>
+          <li class="header_social_menu">
+            <a class="header_social_link link" href="tel:+110001111111" rel="noopener noreferrer">+11 (000)
+              111-11-11</a>
+          </li>
+        </ul>
+      </address>
+    </div>
+  </header>
   <main>
     <section class="main_menu">
       <div class="container maines">
@@ -77,13 +77,14 @@
 
           <li class="porto_item">
             <a href="" class="link linkes">
-              <div class="porto_image"><img src="./images/Banking_App_Interface_Concept.jpg" alt="Banking App Interface Concept" width="360"
-                height="300" />
-              <p class="porto-box-overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p></div>
+              <div class="porto_image"><img src="./images/Banking_App_Interface_Concept.jpg"
+                  alt="Banking App Interface Concept" width="360" height="300" />
+                <p class="porto-box-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+              </div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">
                   Banking App Interface Concept
@@ -94,12 +95,14 @@
           </li>
           <li class="porto_item">
             <a href="" class="link linkes">
-              <div class="porto_image"><img src="./images/Cashless_Payment.jpg" alt="Cashless Payment" width="360" height="300" />
-              <p class="porto-box-overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p></div>
+              <div class="porto_image"><img src="./images/Cashless_Payment.jpg" alt="Cashless Payment" width="360"
+                  height="300" />
+                <p class="porto-box-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+              </div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Cashless Payment</h2>
                 <p class="porto_item_text">Marketing</p>
@@ -108,12 +111,14 @@
           </li>
           <li class="porto_item">
             <a href="" class="link linkes">
-            <div class="porto_image"> <img src="./images/Meditation_App.jpg" alt="Meditation App" width="360" height="300" />
-              <p class="porto-box-overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p></div>
+              <div class="porto_image"> <img src="./images/Meditation_App.jpg" alt="Meditation App" width="360"
+                  height="300" />
+                <p class="porto-box-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+              </div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Meditation App</h2>
                 <p class="porto_item_text">App</p>
@@ -125,12 +130,14 @@
 
           <li class="porto_item">
             <a href="" class="link linkes">
-              <div class="porto_image"><img src="./images/Taxi_Service.jpg" alt="Taxi Service" width="360" height="300" />
-              <p class="porto-box-overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p></div>
+              <div class="porto_image"><img src="./images/Taxi_Service.jpg" alt="Taxi Service" width="360"
+                  height="300" />
+                <p class="porto-box-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+              </div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Taxi Service</h2>
                 <p class="porto_item_text">Marketing</p>
@@ -139,12 +146,14 @@
           </li>
           <li class="porto_item">
             <a href="" class="link linkes">
-              <div class="porto_image"><img src="./images/Screen_Illustrations.jpg" alt="Screen Illustrations" width="360" height="300" />
-              <p class="porto-box-overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p></div>
+              <div class="porto_image"><img src="./images/Screen_Illustrations.jpg" alt="Screen Illustrations"
+                  width="360" height="300" />
+                <p class="porto-box-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+              </div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Screen Illustrations</h2>
                 <p class="porto_item_text">Design</p>
@@ -153,12 +162,14 @@
           </li>
           <li class="porto_item">
             <a href="" class="link linkes">
-              <div class="porto_image"><img src="./images/Online_Courses.jpg" alt="Online Courses" width="360" height="300" />
-              <p class="porto-box-overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p></div>
+              <div class="porto_image"><img src="./images/Online_Courses.jpg" alt="Online Courses" width="360"
+                  height="300" />
+                <p class="porto-box-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+              </div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Online Courses</h2>
                 <p class="porto_item_text">Marketing</p>
@@ -170,13 +181,14 @@
 
           <li class="porto_item">
             <a href="" class="linkes link">
-              <div class="porto_image"><img src="./images/Instagram_Stories_Concept.jpg" alt="Instagram Stories Concept" width="360"
-                height="300" />
-              <p class="porto-box-overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p></div>
+              <div class="porto_image"><img src="./images/Instagram_Stories_Concept.jpg" alt="Instagram Stories Concept"
+                  width="360" height="300" />
+                <p class="porto-box-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+              </div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Instagram Stories Concept</h2>
                 <p class="porto_item_text">Design</p>
@@ -185,12 +197,14 @@
           </li>
           <li class="porto_item">
             <a href="" class="linkes link">
-              <div class="porto_image"><img src="./images/Organic_Food.jpg" alt="Organic Food" width="360" height="300" />
-              <p class="porto-box-overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p></div>
+              <div class="porto_image"><img src="./images/Organic_Food.jpg" alt="Organic Food" width="360"
+                  height="300" />
+                <p class="porto-box-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+              </div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Organic Food</h2>
                 <p class="porto_item_text">Web Site</p>
@@ -199,12 +213,14 @@
           </li>
           <li class="porto_item">
             <a href="" class="linkes link">
-              <div class="porto_image"><img src="./images/Fresh_Coffee.jpg" alt="Fresh Coffee" width="360" height="300" />
-              <p class="porto-box-overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task
-                Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                App · Cloud Storage App
-              </p></div>
+              <div class="porto_image"><img src="./images/Fresh_Coffee.jpg" alt="Fresh Coffee" width="360"
+                  height="300" />
+                <p class="porto-box-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                  App · Cloud Storage App
+                </p>
+              </div>
               <div class="div-text">
                 <h2 class="porto_item_tittle">Fresh Coffee</h2>
                 <p class="porto_item_text">Web Site</p>
@@ -256,7 +272,7 @@
       </div>
     </div>
   </footer>
-  
+
   <script src="./js/modal.js"></script>
 </body>
 
